update stared effect

--- a/No1.todolist/index.html
+++ b/No1.todolist/index.html
@@ -90,7 +90,7 @@
         <div class="checkbox"></div>
         <div class="todoname">Type Something Here ...</div>
         <div class="option">
-          <div class="star">
+          <div class="star stared">
             <a href="#">
               <i class="fas fa-star"></i>
             </a>
