--- a/0-網站模板/index.html
+++ b/0-網站模板/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>網頁樣板</title>
   <!-- <meta name="description" content=""> -->
 
   <link rel="stylesheet" href="css/cssreset.css">
@@ -20,7 +20,7 @@
 <body>
   <div class="wrap">
     <div class="header"></div>
-    <div class="content"></div>
+    <div class="content">暫無內容</div>
     <div class="footer"></div>
   </div>
 
