--- a/No4.product-gallery/index.html
+++ b/No4.product-gallery/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>網頁樣板</title>
+  <title>No4.product-gallery</title>
   <!-- <meta name="description" content=""> -->
 
   <link rel="stylesheet" href="css/cssreset.css">
