--- a/No9.skill-tree/index._static.html
+++ b/No9.skill-tree/index._static.html
@@ -81,10 +81,10 @@
         "s_0_0": new Skill(0, 0, "Skill-0-0", []),
         "s_0_1": new Skill(0, 1, "Skill-0-1", []),
         // step 1
-        "s_1_0": new Skill(1, 0, "Skill-1-0", ["s_0_0"]),
+        "s_1_0": new Skill(1, 0, "Skill-1-0", ["s_0_0", "s_0_1"]),
         // step 2
         "s_2_0": new Skill(2, 0, "Skill-2-0", ["s_1_0"]),
-        "s_2_1": new Skill(2, 1, "Skill-2-1", ["s_0_1"]),
+        "s_2_1": new Skill(2, 1, "Skill-2-1", ["s_1_0", "s_0_1"]),
         // step 3
         "s_3_0": new Skill(3, 0, "Skill-3-0", ["s_2_1"]),
         "s_3_1": new Skill(3, 1, "Skill-3-1", ["s_2_0", "s_2_1"]),
@@ -107,7 +107,6 @@
       let countDistance = 120;
       let circleRadius = 50;
       let ground = app.get("#ground")
-      ground.innerHTML="" // 因為要重畫，所以先清空
 
       for (let key in skills){
         let skill = skills[key];
@@ -115,11 +114,8 @@
         // tagName, atrs, parentElement
         let x = stepDistance * (skill.step+0.5)
         let y = countDistance * (skill.count+0.5)
-        let opacity = 0.1+(0.3*skill.level)
-        let circle = app.createSvgElement("circle", {
-          "cx":x, "cy":y, "r":circleRadius, 
-          "fill":"#ddeeff", "stroke":"#8899aa",
-          "fill-opacity":opacity
+        app.createSvgElement("circle", {
+          "cx":x, "cy":y, "r":circleRadius, "fill":"#ddeeff", "stroke":"#8899aa"
         }, ground);
 
         // 建立每個技能名字的文字
@@ -127,34 +123,17 @@
           "x":x, "y":y+5, "text-anchor": "middle"
         }, ground).textContent=skill.name;
 
-        // 建立和前置技能的線條連結、與記錄前置技能是否被完成
-        let ready = true; // 記錄目前的技能是否準備好可以按了
+        // 建立和前置技能的線條連結
         skill.preSkills.forEach(function(preSkill){
           let startX = stepDistance * (preSkill.step+0.5)
           let startY = countDistance * (preSkill.count+0.5)
 
-          // 計算前置技能是否被完成
-          let complete = preSkill.level === app.cst.MAX_LEVEL
-          ready = ready&&complete;
-          let strokeWidth = complete?5:1;  // 如果前置技能點滿，線條加粗
-
           app.createSvgElement("line", {
             // 線條起始點 線條終點
             "x1":startX+circleRadius, "y1":startY, "x2":x-circleRadius, "y2":y, 
-            "stroke": "#888888", "stroke-width":strokeWidth
+            "stroke": "#888888"
           }, ground)
         })
-
-        // 如果可以按，就註冊點擊事件
-        if(ready && (skill.level < app.cst.MAX_LEVEL) ) {
-          app.setEventHandlers(circle, {
-            "click": function(){
-              skill.level++;
-              app.render();
-            }
-          })
-        }
-
 
       }
     }
