no.3 admin-order index Weekly edit

--- a/No3.admin-order/source/index.html
+++ b/No3.admin-order/source/index.html
@@ -360,6 +360,8 @@ current: index
 
   select.addEventListener('click', function(e){
     let selected = e.target.textContent // 點選到的選項
+    const selection = document.querySelector('.home-select-week a')
+    selection.textContent = selected
 
     let since = document.querySelector('#since')
     let to = document.querySelector('#to')
